--- a/src/InjectionScript.Lsp.Server/InjectionScript.Lsp.Server.csproj
+++ b/src/InjectionScript.Lsp.Server/InjectionScript.Lsp.Server.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.3.0" />
     <PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.10.0" />
   </ItemGroup>
 
