--- a/src/InjectionScript.Lsp.Server/InjectionScript.Lsp.Server.csproj
+++ b/src/InjectionScript.Lsp.Server/InjectionScript.Lsp.Server.csproj
@@ -1,5 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -7,11 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.3.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights" Version="2.8.1" />
     <PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.10.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\InjectionScript.Lsp\InjectionScript.Lsp.csproj" />
   </ItemGroup>
-
 </Project>
