--- a/src/InjectionScript/InjectionScript.csproj
+++ b/src/InjectionScript/InjectionScript.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net46</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Antlr4.Runtime" Version="4.6.5" />
