--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -5,5 +5,6 @@
 		<Authors>Jakub Linhart</Authors>
 		<Company>UOInfusion</Company>
 		<Product>InjectionScript</Product>
+		<LangVersion>7</LangVersion>
 	</PropertyGroup>
 </Project>
